	Channels update.
	Selectable gettimer source. (de)activate/del/add timers only with SmartTVWeb
	Update EPG Filter
	EPGList/ Recordinglist bug fixed (hopefully)
	New key from old KPN remote added for swap prev / current channel
	Add script to generate channels.js (svdrpsend.pl needed)
	Erased channelsX.js
	Subs prio can be set eq TV5 sends multiple subs. default "DUT, ENG"



0.23	Infobox for connection Error, not only ERRR on display but also the Infobox
	Updated EPG filter for Sat.1/Pro7, Rai (13E), TVP (19E) Polish (13E)
	channels update.
	Dynamic audio selection only if number of audio channels > 1 and not "NAR" (uk mostly)
	<blue> key - EPG info always start at Now.
	Save position when poweroff during playback // Resume on poweron
	hide/display schedule with same button (yellow)
	Dynamic OSD/Menu language selection
	Removed action 'display EPG/Info' from key 'back', use 'blue' for epg/info
	Some info while waiting for searchtimer info
	Updated the resume function to work with the vdr 2.1.1 (changed to decimal ',')
	Added group 4, some Polish channels (NC+ sorting order)
	During play '0' jumps to 0:00:00 and now resets posmark index also to 0
	Sort the Recordingslist so no double maps are shown
	Volume steps are 1, if volume < 5
	in EPG/ Guide view you can switch groups with << and >> (Live Update only if 19x3 with pip enabled image)
	SmartTVWeb getmarks added (no more restfulapi getmarks)


0.22	Updated EPG filter for 42E, canal sat (tid 1088), canal+ (tid 1060), CDS (veronica, iConcerts, Animax)
	Fix: Right month is now shown in recordings menu.
	Fix: multiple EPG languages on 1 transponder.
	Fix: crash when media/recordings directory is empty
	Fix: 'epg now' (it wasn't always the right info on some UK channels.)
	Added some channels for 42E to group 3
	Updated channels.conf
	SmartTVWeb timer handling added (No more restfulapi needed for timers)
	Info about audio/video in Infobox when playing Recording
	Date/Time info during play